css/styles.css
.img1{
  height: 500px;
  width: 101.49%;
}
.mid-image{
  position: absolute;
  margin-left: 40%;
  margin-top: -27%;
  font-size: 28px;
  color: white;
  font-family: serif;
  text-align: center;
}
.row{
  margin-bottom: 3em;

}
#breakfast{
  width:410px;
  height:86%;

}
#breakfast:hover{
  opacity: 0.3;
  cursor: pointer;

}
#lunch{
  width:410px;
  height:86%;

}
#lunch:hover{
  opacity: 0.3;
  cursor: pointer;

}
#dinner{
  width:400px;
  height:86%;

}
#dinner:hover{
  opacity: 0.3;
  cursor: pointer;

}
ul{
  list-style-type: none;

}
.imgtext{
  font-size: 30px;
  color: white;
  font-family: serif;
  position: absolute;
  bottom: 90px;
  left:130px;

}
.text1{
  font-size:30px;
  font-family: serif;
  color: #566573;
  padding-bottom: 0.9em;
  padding-left: 3em;
  padding-top: 1em;
  margin-right: -1em;
  margin-left: -1em;
  background-color: #f1f1f1;

}
.text1:hover{
  color:white;
  background-color: #F15A29;
  text-decoration: none;
  cursor: pointer;

}
.text2{
  font-size: 30px;
  font-family: serif;
  color: #566573;
  padding-bottom: 1.15em;
  padding-left: 3em;
  padding-top: 1em;
  margin-right: -1em;
  margin-left: -1em;
  background-color: #f1f1f1;

}
.text2:hover{
  color:white;
  background-color: #F15A29;
  text-decoration: none;
  cursor: pointer;

}
#fastfood{
  border-style: solid;
  border-color: #FFFFFF;
  border-width: 20px;
  box-shadow: 0 0 10px 10px #F2F2F2;
  margin-bottom: 5em;

}
#drinks{
  border-style: solid;
  border-color: #FFFFFF;
  border-width: 23px;
  box-shadow: 0 0 10px 10px #F2F2F2;

}
h2{
  font-family: serif;
}
h4{
  font-family: serif;
}
.img2{
  width: 101.49%;
  height:500px;
  margin-bottom: 10em;
}
.active{
margin-bottom: -100px;
background-color: black;
color: white;
}
.row.row1{
  margin-left: 20%;
  margin-top: -25%;
  font-size: 30px;


}
#btn1{
  background-color: #566573;
  padding:0.1em;


}
#btn2{
  background-color: #566573;
  padding:0.1em;


}
#btn3{
  background-color: #566573;
  padding:0.1em;


}
#btn4{
  background-color: #566573;
  padding:0.1em;

}
.cont1{
  border-style: solid;
  border-color: #FFFFFF;
  border-width: 23px;
  box-shadow: 0 0 6px 6px lightgrey;
  column-rule-style: solid;
  column-rule-color: black;



}
.row2{
  column-rule-style: solid;
  column-rule-color: black;

}


.h3text{
  color:#F15A29;
  font-family: serif;
  font-size: 30px;
}

